--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
+<link rel="stylesheet" href="styles.css">
+
+
 <div>
-    <h1>Welcome</h1>
-    <p>You have been granted access to the platform. 
-Please create an account.</p>
-    <h4>Sign Up!</h4>
-    <h3></h3>
-    <input type="text" placeholder="user name">
-    <br>
-    <input type="file"
-        id="img"
-        accept=".img"
-        />
-    <br><br>
-    <button>Submit</button>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png" width="100%">
+    <input type="text" placeholder="search"><br><br>
+    <button>Google Search</button>
+    <button>I feeling lucky</button>
 </div>
