--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <link rel="stylesheet" href="styles.css">
 
-
-<div>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png" width="100%">
-    <input type="text" placeholder="search"><br><br>
-    <button>Google Search</button>
-    <button>I feeling lucky</button>
-</div>
+<h1>Vihandu Wanniarchchi</h1>
+<br>
+<a href="projects.html" target="_blank">Projects</a>
