--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
 <link rel="stylesheet" href="styles.css">
-
-
-<div>
+</head>
+<body>
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png" width="100%">
     <input type="text" placeholder="search"><br><br>
     <button>Google Search</button>
     <button>I feeling lucky</button>
+</body>
     <footer>
         <a href="privacy.html" target="_top">privacy</a>
     </footer>
-</div>
+</html>
