--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png" width="100%">
-    <input type="text" placeholder="search"><br><br>
-    <button>Google Search</button>
-    <button>I feeling lucky</button>
+    <h1>Favourite Food</h1>
+    <ol>
+        <li>Kottu</li>
+        <li>Chicken</li>
+        <li>Vegi</li>
+    </ol>
+    
 </body>
-    <footer>
-        <a href="privacy.html" target="_top">privacy</a>
-    </footer>
+
 </html>
