--- a/index.html
+++ b/index.html
@@ -2,23 +2,9 @@
 <html>
 <head>
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Black+Ops+One&family=Creepster&family=La+Belle+Aurore&family=MedievalSharp&family=Orbitron&family=Rye&display=swap" rel="stylesheet">
-        <script src="app.js"></script>
 </head>
 <body>
-    <img src="image.jpg" height="50%" width="50%"><br>
-    <h1>I am Vihandu Wanniarachchi</h1><br>
-    <h2>Facts:</h2><br>
-    <ul>
-        <li>Undergraduate</li>
-        <li>Volunteer</li>
-        <li>Leader</li>
-    </ul><br>
-
-    <input type="text" placeholder="email"><br>
-    <button>Join NewsLetter</button>
-
-    
+     I am Vihandu Wanniarachchi
 </body>
 
 </html>
