designing google css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     I am Vihandu Wanniarachchi
+    <img class="image"src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png">
+    <br>
+    <input type="text" placeholder="search">
+    <br><br>
+    <div class="container">
+    <button>Submit</button>
+    </div>
 </body>
 
 </html>
