--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img class="image"src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png">
-    <br>
-    <input type="text" placeholder="search">
-    <br><br>
-    <div class="container">
-    <button>Submit</button>
-    </div>
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="green"></div>
 </body>
 
 </html>
