--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="red"></div>
-    <div class="blue"></div>
-    <div class="green"></div>
+    <div class="padding">
+        ibkhvugcfyxtdxuycuvlhikbjlnjbvcyxtfhyvjknlm;mkn
+        jhvfcdxsredrftgyjikolpkjhgtfrdsewaesrdtfyu
+        ioplokijuygtfrdeswaesrdtfyguhi
+        joiuygtfrdesw
+    </div>
 </body>
 
 </html>
