creating following button style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="padding">
-        ibkhvugcfyxtdxuycuvlhikbjlnjbvcyxtfhyvjknlm;mkn
+    <div class="padding">nlm;mkn
         jhvfcdxsredrftgyjikolpkjhgtfrdsewaesrdtfyu
         ioplokijuygtfrdeswaesrdtfyguhi
         joiuygtfrdesw
     </div>
+
+    <button>Following</button>
 </body>
 
 </html>
