fixing input field css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="padding">nlm;mkn
-        jhvfcdxsredrftgyjikolpkjhgtfrdsewaesrdtfyu
-        ioplokijuygtfrdeswaesrdtfyguhi
-        joiuygtfrdesw
+    <img class="image"src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png">
+    <br>
+    <input class="search-input" type="text" placeholder="search">
+    <br><br>
+    <div class="container">
+    <button>Search</button>
     </div>
-
-    <button>Following</button>
 </body>
 
 </html>
