adding alt and changing image size

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img class="image"src="https://upload.wikimedia.org/wikipedia/commons/5/51/Google.png">
-    <br>
-    <input class="search-input" type="text" placeholder="search">
-    <br><br>
-    <div class="container">
-    <button>Search</button>
+    <div class="main">
+        <img class="image"src="/image/picture.png" alt="Advertisment about Transportation Equipment(Tracking Device) : Soly Entrepreises">
+        <br>
+        <input class="search-input" type="text" placeholder="search">
+        <br><br>
+
+        <div class="flexbox">
+            <button>Google Search</button>
+            <button>Felling Awesom</button>
+        </div>
     </div>
 </body>
 
