--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main">
-        <img class="image"src="/image/picture.png" alt="Advertisment about Transportation Equipment(Tracking Device) : Soly Entrepreises">
-        <br>
-        <input class="search-input" type="text" placeholder="search">
-        <br><br>
+    <div class="card">
+        <img class="image" src="image/photo 4.jpg" alt="the person profile photo">  
 
-        <div class="flexbox">
-            <button>Google Search</button>
-            <button>Felling Awesom</button>
+        <div>
+            <h1>Name    : Vihandu Wanniarachchi</h1>
+            <h2>Address : NO 4B Regent Terres Mudungoda</h2>
+            <h2>Contact : +94 760001217</h2>
         </div>
     </div>
 </body>
