--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <div class="card">
+        <div class="border">
         <img class="image" src="image/photo 4.jpg" alt="the person profile photo">  
-
-        <div>
+        </div>
+        <div class="border">
             <h1>Name    : Vihandu Wanniarachchi</h1>
             <h2>Address : NO 4B Regent Terres Mudungoda</h2>
             <h2>Contact : +94 760001217</h2>
