adding colors css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="border">
         <img class="image" src="image/photo 4.jpg" alt="the person profile photo">  
         </div>
-        <div class="border">
+        <div>
             <h1>Name    : Vihandu Wanniarachchi</h1>
             <h2>Address : NO 4B Regent Terres Mudungoda</h2>
             <h2>Contact : +94 760001217</h2>
