--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="card">
-        <div class="border">
-        <img class="image" src="image/photo 4.jpg" alt="the person profile photo">  
-        </div>
-        <div>
-            <h1>Name    : Vihandu Wanniarachchi</h1>
-            <h2>Address : NO 4B Regent Terres Mudungoda</h2>
-            <h2>Contact : +94 760001217</h2>
-        </div>
-    </div>
+    <h1>Join the exploration...</h1>
+    <button class="btn">Sign up</button>
 </body>
 
 </html>
