span with underline

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Join the exploration...</h1>
+    <h1>Join <span class="bro">bro</span> the exploration...</h1>
     <button class="btn">Sign up</button>
 </body>
 
