birthday card : css techniques

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>NETFLIX</h1>
+    <div class="hero">
+    <h1>Happy Birthday Vihandu!</h1>
+    <img class="image" src="image/photo 4.jpg" alt="profile photo">
+    <h2>21 Years Old!</h2>
+    <h2>04.07.2005</h2>
+    </div>
 </body>
 
 </html>
