--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h2>21 Years Old!</h2>
     <h2>04.07.2005</h2>
     </div>
+    <div class="gift">
+        <h3>Here is your gift</h3>
+        <div class="gift-img"></div>
+    </div>
+
 </body>
 
 </html>
