--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     </div>
     <div class="gift">
         <h3>Here is your gift</h3>
-        <div class="gift-img"></div>
+        <div class="gift-img" id="id1"></div>
     </div>
+
+    <div class="gift">
+        <h3>Here is your gift</h3>
+        <div class="gift-img" id="id2"></div>
+    </div>    
 
 </body>
 
